<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="registration_error_invalid_password">The password is incorrect. Please try again.</string>
    <string name="uploading_data">Saving data...</string>
    <string name="login_error">Login failed. Make sure your credentials are correct and then please try again.</string>
    <string name="registration_error">Registration failed. Please try again.</string>
    <string name="service_unavailable">Unable to connect to the server. Please try again later.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_hint">Enter password</string>
    <string name="participant_id_header">Participant Id:</string>
    <string name="participant_id_hint">Enter participant id</string>
    <string name="password_header">Password:</string>
    <string name="password_confirm_header">Password Confirm:</string>
    <string name="password_empty_error">Please enter a password</string>
    <string name="password_match_error">The passwords do not match</string>
    <string name="registration_success">Your account was created successfully</string>
    <string name="login_app_name_header">Ask On The Go™ Surveys</string>
    <string name="skip_question_message">Would you like to skip this question?</string>
    <string name="skip_question_title">Skip Question?</string>
    <string name="skip_question_negative_button">No</string>
    <string name="skip_question_positive_button">Yes</string>
    <string name="timeout_occurred">Timeout occurred!</string>
    <string name="need_account">Don\'t have an account?</string>
    <string name="participant_id_empty_error">Please enter a participant id</string>
    <string name="password_confirm_empty_error">Please enter the confirmation password</string>
    <string name="previous_button_text">Previous</string>
    <string name="next_button_text">Next</string>

</resources>
