<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/screen_header"
        style="@style/LoginScreenHeader" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/LoginLabel"
            android:text="@string/participant_id_header"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/participantIdTextBox"
            style="@style/LoginEditText"
            android:hint="@string/participant_id_hint" />

        <TextView
            style="@style/LoginLabel"
            android:text="@string/password_header"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/passwordTextBox"
            style="@style/LoginEditText"
            android:hint="@string/password_hint"
            android:password="true" />

        <TextView
            style="@style/LoginLabel"
            android:text="@string/password_confirm_header"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/passwordConfirmTextBox"
            style="@style/LoginEditText"
            android:hint="@string/password_hint"
            android:password="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/registerButton"
            style="@style/LoginSubmitButton"
            bootstrap:bb_type="success"
            bootstrap:bb_roundedCorners="true"
            android:text="@string/register"/>

    </LinearLayout>

</RelativeLayout>