<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screen_header"
        style="@style/LoginScreenHeader" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/LoginLabel"
            android:text="@string/participant_id_header"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/participantIdTextBox"
            style="@style/LoginEditText"
            android:hint="@string/participant_id_hint" />

        <TextView
            style="@style/LoginLabel"
            android:text="@string/password_header"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/passwordTextBox"
            style="@style/LoginEditText"
            android:hint="@string/password_hint"
            android:password="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/loginButton"
            style="@style/LoginSubmitButton"
            bootstrap:bb_roundedCorners="true"
            bootstrap:bb_type="primary"
            android:text="@string/login"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="11dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Don't have an account?"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_type="success"
                android:textSize="20dp"
                android:text="@string/register"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>